[package]
name = "luxe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
colored = "2.0.0"
colour = "0.6.0"
serde = "1.0.151"
serde_derive = "1.0.151"
serde_json = "1.0.91"
toml = "0.5.10"
